# monocoque-ruby

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  wasm-toolchain.cmake
demo/src/: demo.rb
demo/webassembly/: index.html  mqrb-core.wasm
include/: api.h  common.h  java_script.hpp  java_script_object.hpp  ruby_instance.hpp  vm.hpp
src/: api.cpp  instance.cpp  java_script.cpp  java_script_object.cpp  main.cpp  main_wasm.cpp  ruby_instance.cpp  vm.cpp
src-js/: mnqrb-lib.js  mqrb-lib.js  mqrb-pre.js
test/: test.cpp
tools/mruby-patcher/: build_config.arm.rb  build_config.asm.rb  build_config.host.rb  build_config.rb  build_config.wasm.rb  mnqrb.gembox  patch.sh
